# emotion-vectors-gemma

./: .gitignore  README.md  pyproject.toml
configs/: small_gemma3_1b_application.json
data/examples/: neutral_tiny.jsonl  probe_texts.jsonl  stories_tiny.jsonl
data/probes/: probe_texts_16.jsonl
data/seeds/: emotions_16.txt  emotions_small.txt  topics_12.txt  topics_small.txt
scripts/: compute_vectors.py  generate_stories.py  run_small_application_repro.sh  score_texts.py  steer_generate.py  validate_stories.py
src/emotion_vectors_gemma/: __init__.py  activations.py  datasets.py  modeling.py  steering.py  vectors.py
tests/: test_vectors.py
