[project]
name = "emotion-vectors-gemma"
version = "0.1.0"
description = "Paper-style emotion-vector extraction and steering experiments for open-weight causal LMs."
requires-python = ">=3.10"
dependencies = [
  "accelerate",
  "huggingface-hub",
  "numpy",
  "pandas",
  "scikit-learn",
  "torch",
  "transformers",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

